[metadata]
name = sinol_make
version = attr: sinol_make.__version__
author = Mateusz Masiarz
author_email = m.masiarz@fri.edu.pl
maintainer = Tomasz Nowak, Mateusz Masiarz
maintainer_email = tomasz.nowak@tonowak.com, m.masiarz@fri.edu.pl
description = CLI tool for creating sio2 task packages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/sio2project/sinol-make/issues
    Homepage = https://github.com/sio2project/sinol-make
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
packages_dir = src
include_package_data = True
python_requires = >=3.7
install_requires =
    argparse
    argcomplete
    requests
    PyYAML
    dictdiffer
    importlib-resources

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    requests-mock

[options.entry_points]
console_scripts =
    sinol-make = sinol_make:main

[tool:pytest]
testpaths =
    tests
markers =
    github_runner: Mark tests that require GitHub runner
    oiejq: Mark tests that require working oiejq
