[metadata]
name = st_make
version = attr: sinol_make.__version__
author = Stanisław Czech
author_email = sczech@adespawn.pl
maintainer = Stanisław Czech, Olaf Targowski
maintainer_email = sczech@adespawn.pl, me@otsrv.net
description = CLI tool for creating sio2 task packages [Forked from sio2project/sinol-make]
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/Stowarzyszenie-Talent/st-make/issues
    Homepage = https://github.com/Stowarzyszenie-Talent/st-make
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find_namespace:
packages_dir = src
include_package_data = True
python_requires = >=3.7
install_requires =
    argparse
    argcomplete
    requests
    PyYAML
    dictdiffer
    importlib-resources
    psutil
    packaging

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist
    requests-mock

[options.entry_points]
console_scripts =
    st-make = sinol_make:main

[tool:pytest]
testpaths =
    tests
markers =
    github_runner: Mark tests that require GitHub runner
    oiejq: Mark tests that require working oiejq
