[metadata]
name = sinol_make
version = attr: sinol_make.__version__
author = Mateusz Masiarz
author_email = m.masiarz@fri.edu.pl
maintainer = Tomasz Nowak, Mateusz Masiarz
maintainer_email = tomasz.nowak@tonowak.com, m.masiarz@fri.edu.pl
description = CLI tool for creating sio2 task packages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/sio2project/sinol-make/issues
    Homepage = https://github.com/sio2project/sinol-make
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find_namespace:
packages_dir = src
include_package_data = True
python_requires = >=3.9
install_requires =
    argparse
    argcomplete
    requests
    PyYAML
    dictdiffer
    importlib-resources
    psutil
    packaging
    sio3pack==1.0.0.dev3

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist
    requests-mock

[options.entry_points]
console_scripts =
    sinol-make = sinol_make:main
    sm = sinol_make:main

[tool:pytest]
testpaths =
    tests
markers =
    github_runner: Mark tests that require GitHub runner
    sio2jail: Mark tests that require working sio2jail
